Archive2/33/f82b828245e0ad/output
main.cpp:11:1: note: 'Y::Y(const Y&)' is implicitly deleted because the default definition would be ill-formed:
 Y::Y(Y const&)= default;
 ^
main.cpp:11:1: error: copying non-static data member 'X&& Y::x' of rvalue reference type
