Archive2/33/f82b828245e0ad/main.cpp
struct X
{
};

struct Y
{
    X&& x; 
    Y(Y const&);
};

Y::Y(Y const&)= default;

int main() { }